:lipstick: :bug: Try to fixed the highlight code block over layout issue.

--- a/assets/css/_common/scaffolding/highlight/copy-code.scss
+++ b/assets/css/_common/scaffolding/highlight/copy-code.scss
@@ -11,6 +11,10 @@
   .table-container table tbody tr {
     background: none;
   }
+
+  pre > code span {
+    white-space: break-spaces;
+  }
 }
 
 @if $codeblock_copy_btn_enable {
